--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   },
-  "homepage": "https://chrisuribe.github.io/agilecoderquest"
+  "homepage": "agilecoderquest.chrisuribe.com"
 }
