--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,22 @@
-name: Deploy React Website to GitHub Pages
-
-on:
-  push:
-    branches:
-      - main  # Adjust this if your default branch has a different name
-
+name: Build and Deploy
+on: [push]
+permissions:
+  contents: write
 jobs:
   build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'  # Use the Node.js version that matches your development environment
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: |
+          npm ci
+          npm run build
 
-      - name: Install Dependencies
-        run: npm ci  # `npm ci` is faster and more reliable for CI/CD, compared to `npm install`
-
-      - name: Build React App
-        run: npm run build
-
-      - name: Deploy to GitHub Pages
+      - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages  # The branch to deploy to (GitHub Pages)
-          folder: build     # The folder that contains your built project
-          token: ${{ secrets.GITHUB_TOKEN }}  # GitHub automatically creates this secret for use in workflows
+          folder: build # The folder the action should deploy.
 
