--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -29,5 +29,5 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   },
-  "homepage": "https://chrisuribe.github.com/agilecoderquest"
+  "homepage": "https://chrisuribe.github.com/agilecoderquest/"
 }
