--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   },
-  "homepage": "https://chrisuribe.github.io/agilecoderquest/"
+  "homepage": "https://agilecoderquest.chrisuribe.com/"
+  // "homepage": "https://chrisuribe.github.io/agilecoderquest/"
 }
