--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   },
-  "homepage": "https://agilecoderquest.chrisuribe.com/"
+  "homepage": "agilecoderquest.chrisuribe.com"
 }
