--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "http://agilecoderquest.chrisuribe.com",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -28,6 +29,5 @@
     "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
-  },
-  "homepage": "agilecoderquest.chrisuribe.com"
+  }
 }
