--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,16 +9,16 @@ jobs:
     - name: Checkout Repository 🛎️
       uses: actions/checkout@v4
 
-    - name: Install Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20' # Specify the Node.js version you want to use
+    # - name: Install Node.js
+    #   uses: actions/setup-node@v4
+    #   with:
+    #     node-version: '20' # Specify the Node.js version you want to use
 
-    - name: Install Dependencies
-      run: npm ci
+    # - name: Install Dependencies
+    #   run: npm ci
 
-    - name: Build React project
-      run: npm run build
+    # - name: Build React project
+    #   run: npm run build
 
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4
