--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,15 @@ jobs:
     - name: Build React project
       run: npm run build
 
+    # - name: Deploy to GitHub Pages
+    #   uses: JamesIves/github-pages-deploy-action@v4
+    #   with:
+    #     branch: gh-pages  # The branch the action should deploy to.
+    #     folder: dist      # The folder the action should deploy.
+    #     token: ${{ secrets.GITHUB_TOKEN }}  # GitHub automatically creates this secret to authenticate in your workflow.
+
     - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        branch: gh-pages  # The branch the action should deploy to.
-        folder: dist      # The folder the action should deploy.
-        token: ${{ secrets.GITHUB_TOKEN }}  # GitHub automatically creates this secret to authenticate in your workflow.
+        github_token: ${{ secrets.GITHUB_TOKEN }}  # This token is provided by GitHub, no need to create a new one
+        publish_dir: ./build  # Specify the directory of your build artifacts. For React, it's typically './build'
