--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
     - name: Build React project
       run: npm run build
 
+    - name: Copy CNAME to Build Folder
+      run: cp CNAME build/CNAME  # Copy the CNAME file to the build directory
+
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4.5.0
       with:
