--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,7 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     permissions:
-      contents: read
-      pull-requests: write
+      actions: read
     if: github.ref == 'refs/heads/main'
 
     steps:
