--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Build React project
       run: npm run build
 
-    - name: Copy CNAME to Build Folder
-      run: cp CNAME dist/CNAME  # Copy the CNAME file to the build directory (dist)
+    # - name: Copy CNAME to Build Folder
+    #   run: cp CNAME dist/CNAME  # Copy the CNAME file to the build directory (dist)
 
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v3
