--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,34 @@
-name: Build and Deploy
+name: Chris's Build and Deploy Script! 🚀
 
 on:
   push:
     branches:
       - main
 
-# permissions:
-#   contents: write
 jobs:
   build:
-    name: Build Ubuntu latest
+    name: Build Ubuntu latest 🚧
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout Repository 🛎️
       uses: actions/checkout@v4
 
-    - name: Setup Node.js
+    - name: Setup Node.js 🧰
       uses: actions/setup-node@v4
       with:
         node-version: '20' # Specify the Node.js version you want to use
 
-    - name: Install Dependencies
+    - name: Install Dependencies 🔎
       run: npm ci
 
-    - name: Build React project
+    - name: Build React project 🛠️
       run: npm run build
 
-    - name: Copy CNAME to Build Folder
+    - name: Copy CNAME to Build Folder 🔨
       run: cp CNAME dist/CNAME  # Copy the CNAME file to the build directory (dist)
 
-    - name: Upload production-ready build files
+    - name: Upload production-ready build files ⚙️
       uses: actions/upload-artifact@v3
       with:
         name: production-files
@@ -57,25 +55,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-
-    # - name: Deploy to GitHub Pages
-    #   uses: JamesIves/github-pages-deploy-action@v4.5.0
-            
-    #   with:
-    #     branch: gh-pages  # The branch the action should deploy to.
-    #     folder: dist      # The folder the action should deploy.
-    #     token: ${{ secrets.GITHUB_TOKEN }}  # GitHub automatically creates this secret to authenticate in your workflow.
-
-
-    # - name: Deploy to GitHub Pages
-    #   uses: JamesIves/github-pages-deploy-action@v4
-    #   with:
-    #     branch: gh-pages  # The branch the action should deploy to.
-    #     folder: dist      # The folder the action should deploy.
-    #     token: ${{ secrets.GITHUB_TOKEN }}  # GitHub automatically creates this secret to authenticate in your workflow.
-
-    # - name: Deploy to GitHub Pages
-    #   uses: peaceiris/actions-gh-pages@v3
-    #   with:
-    #     github_token: ${{ secrets.GITHUB_TOKEN }}  # This token is provided by GitHub, no need to create a new one
-    #     publish_dir: ./dist  # Specify the directory of your build artifacts. For React, it's typically './build'
+          
