--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "git": "^0.1.5",
+    "node": "^21.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
