--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.12",
     "git": "^0.1.5",
     "node": "^21.6.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
