--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "git": "^0.1.5",
     "node": "^21.6.2",
