--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "git": "^0.1.5",
     "node": "^21.6.2",
     "react": "^18.2.0",
+    "react-auth-kit": "^3.1.2",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6"
   },
