--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-auth-kit": "^3.1.2",
     "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.6"
+    "react-draggable": "^4.4.6",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
