--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "firebase": "^10.9.0",
     "git": "^0.1.5",
     "node": "^21.6.2",
     "react": "^18.2.0",
